[project]
name = "pydashcamviewer"
version = "0.1.0"
description = "Play dashcamvideos and show their gps position in realtime, remade with help of uv"
readme = "README.md"
authors = [
    { name = "hammerill", email = "kyrylo@hammerill.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pydashcamviewer = "pydashcamviewer:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
